data/all_generated_tests/raw_wast_tests/br_EdgeCaseFailuresinbr_table_1145.wast
;; 6. **Test Description 6:**    Create a `br_table` where the table is entirely empty. Attempt to branch and observe if each engine handles this unusual case without causing undefined behavior or crashes.

(assert_invalid
  (module (func $empty-br-table
    (block (br_table 0 (nop)))
  ))
  "type mismatch"
)